apps/stirling-pdf/deployment.yaml
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "stirling-pdf"
  labels:
    app.kubernetes.io/name: "stirling-pdf"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: "stirling-pdf"
  template:
    metadata:
      labels:
        app: "stirling-pdf"
        app.kubernetes.io/name: "stirling-pdf"
        app.kubernetes.io/component: "stirling-pdf"
        app.kubernetes.io/instance: "stirling-pdf-prod"
        app.kubernetes.io/part-of: "stirling-pdf"
    spec:
      securityContext:
        runAsUser: 27452
        runAsGroup: 27452
        fsGroup: 27452
        seccompProfile:
          type: "RuntimeDefault"
      containers:
        - image: "frooodle/s-pdf:3.1.0"
          name: "stirling-pdf"
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 27452
            runAsGroup: 27452
            seccompProfile:
              type: "RuntimeDefault"
            capabilities:
              drop:
                - "ALL"
          command:
            - "java"
            - "-Dfile.encoding=UTF-8"
            - "-jar"
            - "/app.jar"
          ports:
            - containerPort: 8080
              name: "stirling-pdf"
          readinessProbe:
            httpGet:
              port: "stirling-pdf"
              path: "/actuator/health"
          livenessProbe:
            httpGet:
              port: "stirling-pdf"
              path: "/actuator/health"
          resources:
            requests:
              memory: "256Mi"
              cpu: "5m"
            limits:
              memory: "512Mi"
          volumeMounts:
            - mountPath: "/usr/share/tessdata"
              name: "tessdata"
            - mountPath: "/logs"
              name: "logs"
            - mountPath: "/configs"
              name: "configs"
            - mountPath: "/tmp"
              name: "tmp"
      volumes:
        - name: "tessdata"
          emptyDir: {}
        - name: "logs"
          emptyDir: {}
        - name: "configs"
          emptyDir: {}
        - name: "tmp"
          emptyDir: {}
