apps/stirling-pdf/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: stirling-pdf
spec:
  ports:
    - port: 80
      targetPort: stirling-pdf
  selector:
    app.kubernetes.io/name: stirling-pdf
