apps/stirling-pdf/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: stirling-pdf
spec:
  podSelector: {}
  policyTypes:
    - Egress
    - Ingress
  ingress:
    - ports:
        - protocol: "TCP"
          port: "stirling-pdf"
      from: []
  egress: []
